trying to add a mod mode #19